--- a/src/locale/en/messages.po
+++ b/src/locale/en/messages.po
@@ -330,8 +330,8 @@ msgid "Finished? Go back to the <0>Cap Table</0> page and view the result. At an
 msgstr "Finished? Go back to the <0>Cap Table</0> page and view the result. At any point in the history of your ownership, Ledgy can draw you a helpful chart that represents the current equity distribution of your company. <1/>You have several views on your cap table at your fingertips. You can assign your shareholders to groups and view the distribution among them. Or you can get a comprehensive overview by viewing the distribution between the different securities, like common shares, preferred shares, convertibles and options."
 
 #: src/pages/security.jsx:73
-msgid "For even better protection of accounts. Our implementation is <0>open source</0>"
-msgstr "For even better protection of accounts. Our implementation is <0>open source</0>"
+msgid "For even better protection of accounts. And our implementation is <0>open source</0>!"
+msgstr "For even better protection of accounts. And our implementation is <0>open source</0>!"
 
 #: src/pages/about-us.jsx:181
 msgid "Founder of Meisser Economics, Bitcoin Association Switzerland, and Wuala"
