--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -6,12 +6,12 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "POT-Creation-Date: 2018-09-12T18:40:54.619Z\n"
-"PO-Revision-Date: 2019-01-27 13:18+0100\n"
+"PO-Revision-Date: 2019-01-27 13:22+0100\n"
 "Language: de\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #: src/components/SignupForm.jsx:15
 msgid "<0/> Signing up…"
@@ -755,8 +755,8 @@ msgid "Stock Split"
 msgstr "Aktiensplit"
 
 #: src/pages/security.jsx:63
-msgid "Stored encrypted with the battle-tested <0>bcrypt algorithm</0>"
-msgstr "Verschlüsselt mit dem bewährten <0>bcrypt-Algorithmus</0>"
+msgid "Stored encrypted with the battle-tested <0>bcrypt algorithm</0> at 13 rounds"
+msgstr "Verschlüsselt mit dem bewährten <0>bcrypt-Algorithmus</0> mit 13 Runden"
 
 #: src/pages/security.jsx:50
 msgid "Strong passwords"
